<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Graduation Project</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="signup">Signup</string>
    <string name="verify">Commit</string>
    <string name="ver">- - - - - - -</string>
    <string name="insert_nverification_ncode">Insert\nSome Extra\nData</string>
    <string name="verification_code_we_send_to_your_email">verification code we send to your email</string>
    <string name="login_as_a_doctor">login as an Admin ?</string>
    <string name="register_as_a_doctor">register as a doctor</string>
    <string name="welcome_msg">We are committed\nto providing you\nwith exceptional\ncare</string>
    <string name="title_activity_patient_home">PatientHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="card_msg">We are committed to providing you with exceptional care</string>
    <string name="menu_home">Patient Home</string>
    <string name="menu_history">Appointment History</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="orthopedic_specialist">Orthopedic Specialist</string>
    <string name="doctor_hint">Doctor</string>
    <string name="internal_specialist">Internal Specialist</string>
    <string name="sample_time" tools:ignore="TypographyDashes">00:00</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_specialist">Doctor Specialist</string>
    <string name="verify_yor_email_to_login">Verify Yor Email To Login</string>
    <string name="title_activity_book_appointment_with_doctor">BookAppointmentWithDoctorActivity
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="request_list">REQUEST LIST</string>
    <string name="doctors">DOCTORS</string>
    <string name="patients">PATIENTS</string>
    <string name="doctor_email">DOCTOR EMAIL</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="status">STATUS</string>
    <string name="doctors_size">0</string>
    <string name="patients_counter">Patients Counter</string>
    <string name="doctors_counter_system">Doctors Counter System</string>
    <string name="patients_size">0</string>
    <string name="doctor_name_admin">Doctor-Name :</string>
    <string name="doctor_email_admin">Doctor-Email :</string>
    <string name="doctor_phone_admin">Doctor-Phone :</string>
    <string name="doctor_password_admin">Doctor-Password :</string>
    <string name="doctor_email_com">doctor@email.com</string>
    <string name="_090xxxxxx9">090xxxxxx9</string>
    <string name="doctor_description">Doctor Description</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="age">age</string>
    <string name="date_re">Date :</string>
    <string name="phone_re">Phone :</string>
    <string name="description_case">Description Case</string>
    <string name="user_name">user name</string>
    <string name="user_email">user email</string>
    <string name="user_phone">user phone</string>
    <string name="user_password">user password</string>
    <string name="full_name">Full Name</string>
    <string name="email_pro">Email</string>
    <string name="phone_pro">Phone</string>
    <string name="password_pro">Password</string>
    <string name="update">UPDATE</string>
    <string name="profile_update_nactivity">UPADTE YOUR\nPROFILE</string>
    <string name="gender">Gender :</string>
    <string name="settings">Settings</string>
    <string name="the_w_day">THE-DAY</string>
    <string name="the_w_date">THE-DATE</string>
    <string name="are_you_sure_you_want_to_delete_this_specific_day_it_might_not_be_empty">Are you sure you want to delete this specific day? It might not be empty.</string>
    <string name="remove">remove</string>
    <string name="cancel">cancel</string>
    <string name="patient_n">Patient N</string>
    <string name="report_details">Report Details</string>
    <string name="case_description">Case Description</string>
    <string name="just_scan_the_qr_code_to_download_the_app">Just scan the QR code to download the app.</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="doctor_explan">Orthopedic doctors specialize in the diagnosis, treatment, and prevention of conditions related to the musculoskeletal system, including bones, joints, muscles, ligaments, and tendons. They treat injuries like fractures, dislocations, and sprains, as well as chronic conditions such as arthritis and back pain. They may also perform surgeries like joint replacements or repair damaged tissues. Internal Medicine (Physicians) Internal medicine doctors, or internists, focus on adult healthcare, diagnosing and treating a wide range of internal body system conditions. They manage chronic illnesses such as diabetes, hypertension, and heart disease and address acute medical problems. Internists often provide comprehensive care and coordinate with other specialists when necessary.</string>
</resources>