<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/profile_update_nactivity"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:importantForAccessibility="no"
                    android:src="@drawable/bg101"
                    tools:ignore="ImageContrastCheck" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/name_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/user_name"
            android:textColorHint="#546E7A"
            android:minHeight="48dp"
            tools:ignore="Autofill,LabelFor,TextFields" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_pro"
            android:paddingTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_email_profile_24"
            android:drawablePadding="10dp"
            android:hint="@string/user_email"
            android:enabled="false"
            android:fontFamily="sans-serif-condensed-medium"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_pro"
            android:paddingTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/phone_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_phone_iphone_24"
            android:drawablePadding="10dp"
            android:hint="@string/user_phone"
            android:fontFamily="sans-serif-condensed-medium"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_pro"
            android:paddingTop="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="12sp"
            />


        <EditText
            android:id="@+id/password_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_profile_24"
            android:drawablePadding="10dp"
            android:hint="@string/user_password"
            android:fontFamily="sans-serif-condensed-medium"
            android:minHeight="48dp"
            android:enabled="false"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill,LabelFor,TextFields" />


        <Button
            android:id="@+id/button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-condensed-medium"
            android:drawableEnd="@drawable/baseline_update_24"
            android:text="@string/update"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>