<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkDaysForDoctorActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/day_of_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_w_day"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/date_of_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_w_date"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/are_you_sure_you_want_to_delete_this_specific_day_it_might_not_be_empty"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="14sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <Button
                    android:id="@+id/button_remove_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/remove"
                    tools:ignore="ButtonStyle" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    />

                <Button
                    android:id="@+id/button_cancel_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/cancel"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>