<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BookAppointmentWithDoctorActivity"
    tools:showIn="@layout/activity_book_appointment_with_doctor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/doctor_email_patient_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor_email_com"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:drawableStartCompat="@drawable/baseline_email_24" />

                <TextView
                    android:id="@+id/doctor_phone_patient_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_090xxxxxx9"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:drawableStartCompat="@drawable/baseline_phone_android_24" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_description"
                android:fontFamily="sans-serif-condensed-medium"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/baseline_work_24"
                />

            <TextView
                android:id="@+id/doctor_description_patient_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/doctor_explan"
                />

            <Button
                android:id="@+id/Book_Appointment"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_appointment"
                android:fontFamily="sans-serif-condensed-medium"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.core.widget.NestedScrollView>